[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Asteroid.gd" type="Script" id=1]
[ext_resource path="res://images/asteroids/meteorBrown_big1.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[node name="Asteroid" type="Node2D"]

[node name="AsteroidBody" type="RigidBody2D" parent="." index="0"]

input_pickable = false
collision_layer = 2
collision_mask = 7
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 2
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Sprite" type="Sprite" parent="AsteroidBody" index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AsteroidBody" index="1"]

position = Vector2( -1.34488, -1.44791 )
scale = Vector2( 4.77495, 4.51871 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="AsteroidBody" index="2"]

process_mode = 1
wait_time = 10.0
one_shot = true
autostart = true


